--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
-    "sort-by": "^1.2.0"
+    "react-slick": "^0.31.0",
+    "slick-carousel": "^1.8.1",
+    "sort-by": "^1.2.0",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
