--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.8.1",
+    "react-scroll": "^1.9.3",
     "react-slick": "^0.31.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
